Refined a few things

--- a/docassemble/USCISApplications/data/questions/limited_scope_questions.yml
+++ b/docassemble/USCISApplications/data/questions/limited_scope_questions.yml
@@ -107,7 +107,7 @@ subquestion: |
   ##### en español
   
   NO doy mi consentimiento para que se comparta mi información fuera de los contextos descritos anteriormente.
-continue button label: I accept / Acepto
+continue button label: I understand / Entiendo
 ---
 id: limted scope paragraph 6
 continue button field: limited_scope_para_6
