--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -26,7 +26,7 @@ fields:
   - Number of ${ users[i] }'s children applying with them today: users[i].number_children_applying
     datatype: integer
   - Have you applied for any other immigration benefit? (i.e. TPS or asylum)?: users[i].applied_for_other_immigration_benefit
-    datatype: yesnowide
+    datatype: yesnoradio
     default: |
       ${ users[0].applied_for_other if i > 0 else '' }
   - Type of immigration benefit: users[i].applied_benefit_type
@@ -51,11 +51,11 @@ fields:
   - Is ${ users[i] } proof of parole valid for at least the next 90 days?: users[i].proof_of_parole_valid_for_90_days
     datatype: yesnoradio
   - Are you in removal proceedings right now?: users[i].in_removal_proceedings
-    datatype: yesnowide
+    datatype: yesnoradio
     default: |
       ${ users[0].in_removal_proceedings if i > 0 else '' }
   - Have you been issued a Final Order of Removal?: users[i].ever_ordered_removed
-    datatype: yesnowide
+    datatype: yesnoradio
     default: |
       ${ users[0].ever_ordered_removed if i > 0 else '' }
   - note: |
@@ -66,12 +66,12 @@ fields:
         </p>
       </div>
   - Have you ever been arrested, cited, stopped, detained, placed in handcuffs by the police?: users[i].ever_arrested
-    datatype: yesnowide
+    datatype: yesnoradio
   - What happened? Include the location, reason for arrest, and outcome: users[i].arrest_details
     datatype: area
     show if: users[i].ever_arrested
   - Did you bring your criminal history documents with you?: users[i].has_criminal_history_documents
-    datatype: yesnowide
+    datatype: yesnoradio
     show if: users[i].ever_arrested
 ---
 question: |
@@ -121,15 +121,15 @@ fields:
     default: |
       ${ users[0].proof_of_birthplace if i > 0 else '' }
   - Are both of your parents Venezuelan nationals?: users[i].parents_from_venezuela
-    datatype: yesnowide
+    datatype: yesnoradio
     show if:
       code: |
         not "venezuela" in users[i].country_of_birth.lower()
   - "Do you have proof of your parents' birthplace?": users[i].proof_of_parent_birthplace
-    datatype: yesnowide
+    datatype: yesnoradio
     show if: users[i].parents_from_venezuela
   - After leaving your home country, were you in any other country for more than 6 months before arriving to the US?: users[i].in_other_country_longer_than_6_months
-    datatype: yesnowide
+    datatype: yesnoradio
   - When did you leave your home country?: users[i].date_left_home_country_month_and_year
     datatype: ThreePartsDate
   - When did you last enter the US?: users[i].date_of_last_entry
@@ -137,7 +137,7 @@ fields:
   - Do you have proof that you were physically present in the US as of July 31, 2023?: users[i].proof_last_entry_date_before_july_31_2023
     datatype: checkboxes
     choices:
-      - Shelter letter
+      - City or state provided letter
       - Notice to Appear or other immigration document
       - I-94
       - Passport stamp
@@ -145,7 +145,7 @@ fields:
   - Do you have proof that you were physically present in the US as of October 3, 2023?: users[i].proof_last_entry_date_before_october_4_2023
     datatype: checkboxes
     choices:
-      - Shelter letter
+      - City or state provided letter
       - Notice to Appear or other immigration document
       - I-94
       - Passport stamp
@@ -154,15 +154,15 @@ fields:
       variable: users[i].proof_last_entry_date_before_july_31_2023
       is: False
   - Do you have any children applying with you today?: users[i].has_children_applying_today
-    datatype: yesnowide
+    datatype: yesnoradio
   - Was any child born outside of Venezuela?: users[i].has_children_applying_not_born_in_venezuela
     show if: users[i].has_children_applying_today
-    datatype: yesnowide
+    datatype: yesnoradio
   - List each child's name and nationality: users[i].children_outside_of_venezuela
     datatype: area
     show if: users[i].has_children_applying_not_born_in_venezuela
   - How did you last enter the US?: users[i].method_of_entry
-    datatype: combobox
+    datatype: radio
     choices:
       - Presented at a port of entry
       - Entered without documents
@@ -174,38 +174,38 @@ fields:
       - Entered alone: entered alone
       - Other or N/A: other or N/A
   - Did your children enter the US separately from you?: users[i].children_entered_separately
-    datatype: yesnowide
+    datatype: yesnoradio
   - Where, when, and with whom did they enter?: users[i].children_entered_separately_explanation
     datatype: area
     show if: users[i].children_entered_separately
   - Have you had legal status in any other country besides Venezuela?: users[i].had_legal_status_outside_venezuela
-    datatype: yesnowide
+    datatype: yesnoradio
   - List country(ies) and legal status in each: users[i].countries_and_legal_status
     datatype: area
     show if: users[i].had_legal_status_outside_venezuela
   - Have you applied for any other immigration benefit? (i.e. work permit, TPS, or asylum)?: users[i].applied_for_other_immigration_benefit
-    datatype: yesnowide
+    datatype: yesnoradio
   - Explain: users[i].applied_for_other_immigration_benefit_explanation
     datatype: area
     show if: users[i].applied_for_other_immigration_benefit
   - Are you in removal proceedings?: users[i].in_removal_proceedings
-    datatype: yesnowide
+    datatype: yesnoradio
   - Explain (include the date, location, and information about whether this is a final order of removal): users[i].removal_proceedings_explanation
     datatype: area
     show if: users[i].in_removal_proceedings
   - Have you ever been arrested, cited, stopped, detained, or placed in handcuffs by the police?: users[i].ever_arrested
-    datatype: yesnowide
+    datatype: yesnoradio
   - List when/where/outcome of EVERY arrest, including those in US and outside of US: users[i].arrest_details
     datatype: area
     show if: users[i].ever_arrested
   - Have you ever claimed to be a US Citizen?: users[i].claimed_us_citizenship
-    datatype: yesnowide
+    datatype: yesnoradio
   - Have you ever been affiliated with any gangs?: users[i].gang_affiliation
-    datatype: yesnowide
+    datatype: yesnoradio
   - Have you ever served in the military or participated in a paramilitary group?: users[i].served_military
-    datatype: yesnowide
+    datatype: yesnoradio
   - Have you ever been a member of a terrorist organization?: users[i].acted_as_terrorist
-    datatype: yesnowide
+    datatype: yesnoradio
 ---
 id: review_tps_screening_questions
 continue button field: users[i].review_tps_screening_questions
@@ -260,6 +260,34 @@ subquestion: |
 
   % endif
 fields:
+  - What should happen with this application?: supervisor_overall_approval_status
+    datatype: radio
+    choices:
+      - All applicants can **continue**: approved
+      - All applicants are **screened out**: screened_out
+      - "**Some** applications can continue": mixed
+    show if:
+      code: |
+        len(users) > 1
+  - What should happen with this application?: supervisor_overall_approval_status
+    datatype: radio
+    choices:
+      - Continue application: approved
+      - Screened out: screened_out
+    show if:
+      code: |
+        len(users) == 1
+    minlength: 1
+  - Which applications should be **approved**?: approved_applications
+    datatype: object_checkboxes
+    choices:
+      - users
+    show if:
+      variable: supervisor_overall_approval_status
+      is: mixed
+  - Supervisor name: supervisor_name
+  - Supervisor notes: supervisor_notes
+    datatype: area
   - What addenda should be included?: users[i].addenda
     datatype: checkboxes
     choices:
