--- a/docassemble/USCISApplications/data/questions/aiw.yml
+++ b/docassemble/USCISApplications/data/questions/aiw.yml
@@ -1,87 +1,16 @@
 ---
-id: intake worksheet
-continue button field: users[i].applicant_intake_worksheet_questions
-question: |
-  ${ users[i]} Applicant intake worksheet questions
-subquestion: |
-  USCIS needs demographic information about each applicant.
-  Answer these questions about ${ bold(users[i]) }.
-fields:
-  - Receipt number: users[i].receipt_number
-    required: False
-  - Sex: users[i].gender
-    help: |
-      The options here mirror the USCIS form.
-    datatype: radio
-    choices:
-      - Male
-      - Female
-      - Nonbinary
-  - Race: users[i].race
-    datatype: checkboxes
-    choices:
-      - Asian: asian
-      - Black: black
-      - Caucasian/Latino: caucasian_latino
-      - Native American: native_american
-    none of the above: Unknown
-  - Eye color: users[i].eye_color
-    input type: radio
-    choices:
-      - Black: black
-      - Blue: blue
-      - Brown: brown
-      - Gray: gray
-      - Green: green
-      - Hazel: hazel
-      - Maroon: maroon
-      - Pink: pink
-      - Multicolor: multicolor
-      - Uknown: unknown
-  - Hair color: users[i].hair_color
-    input type: radio
-    choices:
-      - Bald: bald
-      - Red: red
-      - Black: black
-      - Sandy: sandy
-      - Blond: blond
-      - White: white
-      - Blue: blue
-      - Unknown: unknown
-      - Brown: brown
-      - Gray: gray
-      - Green: green
-      - Orange: orange
-      - Pink: pink
-      - Purple: purple
-  - Height (answer in feet and inches, or use centimeters below): users[i].height_feet_inches
-    required: False
-  - Height (in centimeters): users[i].height_centimeters
-    required: False
-  - Weight (answer in pounds, or use kilos below): users[i].weight_pounds
-    required: False
-  - Weight (in kilos): users[i].weight_kilos
-    required: False
-validation code: |
-  if not users[i].height_feet_inches and not users[i].height_centimeters:
-    validation_error("Please enter the height in feet and inches or in centimeters")
-  if not users[i].weight_pounds and not users[i].weight_kilos:
-    validation_error("Please enter the weight in pounds or in kilos")
----
 attachment:
   - variable name: users[i].applicant_intake_worksheet[j]
     name: ${ users[i] } - Applicant_intake_worksheet
     filename: ${ users[i] } - Applicant_intake_worksheet
     pdf template file: Applicant_intake_worksheet.pdf
     fields:
-      - "receipt_number": ${ users[i].receipt_number }
       - "users1_a_number": ${ users[i].a_number }
       - "users1_name_full": ${ users[i] }
       - "users1_aliases1": ${ users[i].aliases.item(0) }
       - "users1_aliases2": ${ users[i].aliases.item(1) }
       - "users1_birthdate": ${ users[i].birthdate }
-      - "country_of_citizenship": ${ users[i].country_of_citizenship }
+      - "country_of_citizenship": ${ users[i].country_of_birth }
       - "country_of_birth": ${ users[i].country_of_birth }
       - "gender_male": ${ users[i].sex == "Male" }
       - "gender_female": ${ users[i].sex == "Female" }
@@ -115,10 +44,8 @@ attachment:
       - "hair_orange": ${ users[i].hair_color == "orange" }
       - "hair_pink": ${ users[i].hair_color == "pink" }
       - "hair_purple": ${ users[i].hair_color == "purple" }
-      - "height_centimeters": ${ users[i].height_centimeters }
-      - "height_feet_inches": ${ users[i].height_feet } ft ${ users[i].height_inches } in
-      - "weight_pounds": ${ users[i].weight_pounds }
-      - "weight_kilos": ${ users[i].weight_kilos }
+      - "height_centimeters": ${ users[i].height_cm }
+      - "weight_kilos": ${ users[i].weight_kg }
 ---
 question: |
   Country of citizenship (temporary, shouldn't appear)      
